--- a/src/app/calculator/components/calculator-button/calculator-button.component.html
+++ b/src/app/calculator/components/calculator-button/calculator-button.component.html
@@ -1,5 +1,5 @@
 <!-- <div class="w-1/4 border-r border-b border-indigo-400"> -->
-<button [class.isCommand]="isCommand()">
+<button [class.isCommand]="isCommand()" (click)="handleClick()" [class.isPressed]="isPressed()"  #button>
   <ng-content />
 </button>
 <!-- </div> -->
